Defined color codes for specific text display, and modified some BU::DechoHighlight() function calls

--- a/docs/fr/Introduction.tex
+++ b/docs/fr/Introduction.tex
@@ -277,6 +277,16 @@
     \end{itemize}
 \end{justify}
 
+\begin{justify}
+    Les fonctions utilisées sont documentées dans ce fichier :
+
+    \begin{itemize}
+        \item \textbf{\color{lime}}
+    \end{itemize}
+
+\end{justify}
+
+
 
 \color{green}
 \subsection{Étapes d'initialisation}\color{white}
