Called the BU::ModuleInit::DisplayInitGlobalVarsInfos() function in the Colors.conf file

--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -227,16 +227,16 @@
     Une fois le code couleur ajouté, repérez, dans le même fichier, la sous-section :\\
 
     \begin{itemize}
-        \item \textbf{ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "CheckTextColor" FUNCTIONS}
+        \item \textbf{ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "BU::Main::ModConfig::Colors::CheckTextColor" FUNCTIONS}
     \end{itemize}
 \end{justify}
 
 \begin{justify}
-    Puis créez une nouvelle variable globale de nom de couleur nommée comme la variable créée précédement, sans le \textbf{\color{orange}\_CODE}, puis appelez la fonction \textbf{\color{mauve}CheckTextColor}, suivie du nom de la variable créée dans la sous-section \textbf{COLOR CODES FOR ENCODING}.
+    Puis créez une nouvelle variable globale de nom de couleur nommée comme la variable créée précédement, sans le \textbf{\color{orange}\_CODE}, puis appelez la fonction \textbf{\color{mauve}BU::Main::ModConfig::Colors::CheckTextColor}, suivie du nom de la variable créée dans la sous-section \textbf{COLOR CODES FOR ENCODING}.
 \end{justify}
 
 \begin{justify}
-    Regardez la manière dont la fonction \textbf{\color{mauve}CheckTextColor} est appelée, pour vous aider.\\[1\baselineskip]
+    Regardez la manière dont la fonction \textbf{\color{mauve}BU::Main::ModConfig::Colors::CheckTextColor} est appelée, pour vous aider.\\[1\baselineskip]
 \end{justify}
 
 \begin{justify}
