Update about the colors

--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -301,6 +301,11 @@ configurations \textbf{\color{lime}Text.conf}.
 \subsection{Headers bicolores}\color{white}
 
 \begin{justify}
+    \textbf{Note :} En raison du trop grand nombre de fonctions à déclarer, plus aucune nouvelle couleur ne sera ajoutée parmi les 23 couleurs actuelles.
+\end{justify}
+
+
+\begin{justify}
     Pour davantage faciliter la tâche des développeurs, des fonctions de création de headers bicolores existent.
 \end{justify}
 
