--- a/docs/fr/modules/main/functions/Status.tex
+++ b/docs/fr/modules/main/functions/Status.tex
@@ -189,13 +189,15 @@
     \textbf{Paramètres :}
 
     \begin{itemize}
-        \item \color{orange}\textbf{\$p\_file\color{white} :} \color{white} fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}.\\
+        \item \textbf{\color{orange}\$p\_file\color{white} :} le fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{\textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}}.\\
 
-        \item \color{orange}\textbf{\$p\_lineno\color{white} :} \color{white} le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}).\\
+        \item \textbf{\color{orange}\$p\_lineno\color{white} :} le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}).\\
 
-        \item \color{orange}\textbf{\$p\_badVal\color{white} :} \color{white}\\
+        \item \textbf{\color{orange}\$p\_bad\_value\color{white} :} La mauvaise valeur passée en argument\color{white}.\\
 
-        \item \color{orange}\textbf{\$p\_varVal\color{white} :} \color{white}\\
+        \item \textbf{\color{orange}\$p\_var\_name\color{white} :}  Nom de la variable globale de statut où la mauvaise valeur a été enregistrée.\color{white}\\
+        
+        \item \textbf{\color{orange}\$pa\_correctValues\color{white} :} Tableau contenant la liste des valeurs acceptées par la variable globale de statut.
     \end{itemize}
 \end{justify}
     
@@ -203,8 +205,7 @@
     \textbf{Variables :}
 
     \begin{itemize}
-        \item \color{orange}\textbf{\$v\_array\color{white} :} \color{white}\\
-        \item \color{orange}\textbf{\$i\color{white} :} \color{white}
+        \item \textbf{\color{orange}\$i\color{white} :} .
     \end{itemize}
 \end{justify}
 
