--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -226,7 +226,7 @@
     Une fois le code couleur ajouté, repérez, dans le même fichier, la section :
 
     \begin{itemize}
-        \item \textbf{ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "BU::Main::ModConfig::Colors::CheckTextColor" FUNCTIONS}
+        \item \textbf{ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "BU::Main::ModConfig::Colors::SetTextColor" FUNCTIONS}
     \end{itemize}
 \end{justify}
 
@@ -240,11 +240,11 @@
 
 
 \begin{justify}
-    Puis créez une nouvelle variable globale de nom de couleur nommée comme la variable créée précédement, sans le \textbf{\color{orange}\_CODE}, puis appelez la fonction \textbf{\color{mauve}BU::Main::ModConfig::Colors::CheckTextColor}, suivie du nom de la variable créée dans la sous-section \textbf{COLOR CODES FOR TEXT ENCODING}.
+    Puis créez une nouvelle variable globale de nom de couleur nommée comme la variable créée précédement, sans le \textbf{\color{orange}\_CODE}, puis appelez la fonction \textbf{\color{mauve}BU::Main::ModConfig::Colors::SetTextColor}, suivie du nom de la variable créée dans la sous-section \textbf{COLOR CODES FOR TEXT ENCODING}.
 \end{justify}
 
 \begin{justify}
-    Regardez la manière dont la fonction \textbf{\color{mauve}BU::Main::ModConfig::Colors::CheckTextColor} est appelée, pour vous aider.\\[1\baselineskip]
+    Regardez la manière dont la fonction \textbf{\color{mauve}BU::Main::ModConfig::Colors::SetTextColor} est appelée, pour vous aider.\\[1\baselineskip]
 \end{justify}
 
 \begin{justify}
